Opened 19 years ago

Closed 19 years ago

Last modified 19 years ago

#765 closed bug (fixed)

[Expander] preferences window redraw problems

Reported by: diver Owned by: axeld
Priority: normal Milestone: R1
Component: - General Version:
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

If you try to hold preferences window border by mouse and switch to second workspace and then switch back preferences will not redraw as it should. BTW, is it correct that modal windows can't be moved to another workspace?

Change History (3)

comment:1 by axeld, 19 years ago

Yes, you can only move normal windows this way - other windows are usually not visible outside their context. Fixed in hrev18585.

comment:2 by axeld, 19 years ago

Resolution: fixed

comment:3 by axeld, 19 years ago

Status: newclosed
Note: See TracTickets for help on using tickets.