When building the update region on workspace switch, the mouse event window was ignored even if it was not visible on the previous workspace (only normal windows can be moved this way). This fixes bug #765.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@18585 a95241bf-73f2-0310-859d-f6bbb57e9c96